<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="true"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/black_custom"
        android:textSize="26dp" />
    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:hint="@string/first_name"
        android:textColorHint="@color/grey_custom" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:hint="@string/last_name"
        android:textColorHint="@color/grey_custom" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"

        android:hint="@string/mail"
        android:textColorHint="@color/grey_custom" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/singInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@drawable/rounded_button"
        android:padding="15dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_text"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singInButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="#254FE6"
        app:layout_constraintBottom_toBottomOf="@+id/already_have_account"
        app:layout_constraintEnd_toEndOf="@+id/singInButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/already_have_account"
        app:layout_constraintTop_toBottomOf="@+id/singInButton" />

    <LinearLayout
        android:id="@+id/logoButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singInButton"
        app:layout_constraintVertical_bias="0.19999999">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="42dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:srcCompat="@drawable/dgfjjku" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textColor="@color/black_custom"
            android:text="@string/Sign_in_with_Google" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

