<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_custom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_semibold"
        android:padding="30dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black_custom"
        android:textSize="26dp" />
    <EditText
        android:id="@+id/mail_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:hint="@string/mail"
        android:textColorHint="@color/grey_custom" />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:hintEnabled="false"
    android:textColorHint="@color/grey_custom"
    app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingLeft="50dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        />
</com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="@drawable/rounded_button"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/forgets_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/Forget_password"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintVertical_bias="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>